# Libre.academy

./: .fishbones-devices.cache  .gitignore  INGEST.md  Makefile  PLAN.md  README.md  TRANSLATIONS.md  TRANSLATION_CHECKLIST.md  acheive_prompts.md  achieve_prompt.md  index.html  package-lock.json  package.json  prompts.md  tsconfig.json  vite.config.ts
.blocks-manual/a-to-ts/: format-greeting.json  is-palindrome.json  reverse-array.json
.blocks-manual/challenges-dart-handwritten/: easy-sealed-classes-30.json  medium-records-19.json  medium-sealed-classes-10.json  medium-sealed-classes-30.json
.blocks-manual/challenges-elixir-handwritten/: easy-binaries-30.json  easy-binaries-40.json  hard-binaries-10.json  hard-binaries-30.json  hard-lists-21.json  hard-pipe-operator-35.json  hard-pipe-operator-5.json  hard-strings-2.json  medium-binaries-30.json  medium-tuples-38.json
.blocks-manual/challenges-haskell-handwritten/: hard-higher-order-functions-15.json  hard-list-comprehensions-10.json  hard-list-comprehensions-20.json  hard-tuples-3.json  medium-folds-28.json  medium-higher-order-functions-35.json  medium-list-comprehensions-20.json  medium-list-comprehensions-40.json  medium-lists-11.json  medium-pattern-matching-14.json
.blocks-manual/challenges-lua-handwritten/: medium-string-patterns-26.json
.blocks-manual/challenges-move-handwritten/: hard-abilities-key-store-copy-drop-5.json  hard-modules-26.json
.blocks-manual/challenges-ruby-handwritten/: hard-symbols-9.json  medium-ranges-30.json  medium-ranges-40.json  medium-regular-expressions-37.json
.blocks-manual/challenges-scala-handwritten/: hard-option-and-either-37.json  hard-pattern-matching-35.json
.blocks-manual/challenges-sql-handwritten/: hard-subqueries-14.json
.blocks-manual/challenges-sway-handwritten/: hard-string-utf8-40.json
.blocks-manual/challenges-zig-handwritten/: easy-enums-20.json  easy-tagged-unions-29.json  easy-tagged-unions-39.json  easy-tagged-unions-9.json  hard-error-unions-35.json  hard-slices-1.json  hard-structs-14.json  medium-tagged-unions-29.json  (+1 more)
.claude/: launch.json
api/: .env.example  Cargo.toml  deploy.sh  setup-mail.sh
api/src/: auth.rs  mailer.rs  main.rs  state.rs
api/src/db/: mod.rs  users.rs
api/src/routes/: auth.rs  courses.rs  mod.rs  oauth.rs  oauth_flow.rs  progress.rs  well_known.rs
appstore-submission/: README.md  SUBMIT.md  checklist.md
docs/: catalog-deployment.md  cover-art-style.md  evm-solana-runtime-design.md  haptics.md  i18n-status.md  i18n-tasks.md  openbook-ingest-tracker.md  skill-tree-gaps.md
ingest/: README.md  cli.ts  debug-lesson.ts  package-lock.json  package.json  pdf-parser.ts
public/: devconsole.js  robots.txt  sitemap.xml
scripts/: add-rustlings-hints.mjs  apply-blocks.mjs  apply-lesson-translation.mjs  apply-translations.mjs  author-blocks-batch.mjs  build-learning-zig.mjs  build-updater-manifest.mjs  bulk-generate-challenges.mjs  bulk-generate-evm-lessons.mjs  copy-vendor-to-public.mjs  course-tiers.mjs  extract-starter-courses.mjs  fetch-node-runtime.mjs  fetch-solana-cli.mjs  fix-challenges-zig.mjs  fix-trpl-playground-wrap.mjs  fix-trpl-rand-api.mjs  generate-blocks.mjs  generate-language-challenge-packs.mjs  generate-lesson-audio.mjs  generate-tour-audio.mjs  import-exercism-track.mjs  import-golings.mjs  import-lings-koans-batch.mjs  import-local-audio.mjs  import-rustlings.mjs  import-select-star-sql.mjs  import-ziglings.mjs  ingest-svelte-tutorial.mjs  inject-blocks-fixture.mjs  inject-sample-micropuzzles.mjs  mark-bundled-unreviewed.mjs  optimize-covers.mjs  pick-device.sh  promote-library-to-bundle.mjs  rebuild-challenges-zig-from-orig.mjs  regenerate-weak-challenges.mjs  rerender-micropuzzle-shiki.mjs  reset-local-library.mjs  restructure-mastering-ethereum.mjs  (+15 more)
src/: App.css  App.tsx  lessonHelpers.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/android/: Haptics.kt
src-tauri/native/ios/: Haptics.swift
src-tauri/resources/bundled-packs/: README.md  a-to-ts.academy  a-to-ts.fishbones  a-to-zig.academy  a-to-zig.fishbones  assembly-challenges-arm64-macos.academy  astro-fundamentals.fishbones  bun-complete.fishbones  c-challenges.academy  challenges-assembly-handwritten.academy  challenges-assembly-handwritten.fishbones  challenges-c-handwritten.academy  challenges-c-handwritten.fishbones  challenges-cairo-handwritten.academy  challenges-cairo-handwritten.fishbones  challenges-cpp-handwritten.academy  challenges-cpp-handwritten.fishbones  challenges-csharp-handwritten.academy  challenges-csharp-handwritten.fishbones  challenges-dart-handwritten.academy  challenges-dart-handwritten.fishbones  challenges-elixir-handwritten.academy  challenges-elixir-handwritten.fishbones  challenges-go-handwritten.academy  challenges-go-handwritten.fishbones  challenges-go-mo9kijkd.academy  challenges-haskell-handwritten.academy  challenges-haskell-handwritten.fishbones  challenges-java-handwritten.academy  challenges-java-handwritten.fishbones  challenges-javascript-handwritten.academy  challenges-javascript-handwritten.fishbones  challenges-kotlin-handwritten.academy  challenges-kotlin-handwritten.fishbones  challenges-lua-handwritten.academy  challenges-lua-handwritten.fishbones  challenges-move-handwritten.academy  challenges-move-handwritten.fishbones  challenges-python-handwritten.academy  challenges-python-handwritten.fishbones  (+51 more)
src-tauri/resources/solana/: .crates.toml  .crates2.json  version.yml
src-tauri/scripts/: post-build.sh
src-tauri/src/: ai_chat.rs  chains.rs  courses.rs  diagnostics.rs  docs_crawl.rs  epub_ingest.rs  haptics.rs  http_proxy.rs  image_gen.rs  ingest.rs  ledger.rs  lib.rs  llm.rs  main.rs  native_runners.rs  preview_server.rs  progress_db.rs  sandbox.rs  sveltekit_runner.rs  toolchain.rs  tray.rs  widget_snapshot.rs
src-tauri/src/chains/: README.md  bitcoin.rs  evm.rs  state.rs  svm.rs
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
(+710 files in other folders)
