[package]
name = "libre-api"
version = "0.1.0"
edition = "2021"
description = "Libre HTTP API — auth, course archives, progress sync"
license = "MIT"

[dependencies]
# Web framework. The `ws` feature wires axum's WebSocket extractor —
# the realtime sync endpoint subscribes connected clients to a per-user
# broadcast channel so a completion / setting / solution edit on one
# device fans out to every other authenticated device immediately.
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Stream / sink helpers used by the WebSocket handler to split the
# bidirectional `WebSocket` into a sender + receiver half so we can
# read pings on one task while broadcasting events on another.
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (bundled SQLite — no system dep at deploy time).
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & crypto. Argon2id for password + token hashing; rand for the
# secure random bytes mint_token / pkce_verifier feed off; sha2 for
# the PKCE challenge digest; base64 for token encoding.
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

# JWT signing (Apple client_secret) + JWKS verification (Apple +
# Google id_tokens). `jsonwebtoken` understands both ES256 and RS256.
jsonwebtoken = "9"

# OAuth network calls. rustls-tls instead of native-tls so the binary
# is portable across the dev laptop (macOS) and the VPS (Debian)
# without needing system OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# SMTP client for the self-hosted mail path. `tokio1-rustls-tls`
# keeps the dep tree native-TLS-free (matches reqwest's rustls
# choice). `builder` gives us the typed Message constructor;
# `smtp-transport` is the outbound transport. We hand off to a local
# Postfix on most prod deploys (port 25, plaintext over loopback)
# but the same path works against an external SMTP service over
# STARTTLS:587 if the user prefers that.
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }

# URL building (auth start endpoints + the deep-link return URL).
url = "2"

# Concurrent map for the in-flight OAuth-state cache.
dashmap = "5"

# Timestamps in serialized payloads.
chrono = { version = "0.4", features = ["serde"] }

# Errors / utilities
thiserror = "1"
anyhow = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Env loading from .env at startup
dotenvy = "0.15"
