[package]
name = "fishbones"
version = "0.1.0"
description = "Learn to code through books and guided exercises"
edition = "2021"
default-run = "fishbones"

[lib]
name = "fishbones_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
anyhow = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
parking_lot = "0.12"
rand = "0.8"
tokio = { version = "1", features = ["time", "sync", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
